# packing-puzzle

./: .travis.yml  CONTRIBUTING.md  Cargo.toml  README.md  symmetry.gap
examples/: dlx-example.rs  packing_puzzle.rs  pentominoes.rs  slothouber-graatsma.rs  twobytwo.rs
src/: lib.rs
src/puzzle/: mod.rs  piece.rs  pieces.rs  solver.rs
src/puzzle/piece/: entity.rs  mod.rs  position.rs  symmetry.rs  template.rs  translation.rs
src/puzzle/vector/: mod.rs
src/util/: mod.rs  target.rs
